[package]
name = "boxcrash"
version = "0.1.0"
authors = ["Do Duy <doduycm@gmail.com>"]
build = "build.rs"

[dependencies]
piston_window = "0.63.0"
rand = "0.3.14"
cgmath = "0.12.0"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"


[dependencies.conrod]
version = "0.51.1"
features = ["winit", "glium"]
